--- a/index.html
+++ b/index.html
@@ -32,6 +32,60 @@
             </div>
         </nav>
     </header>
+
+    <!-- showcase -->
+    <section id="showcase">
+        <div class="container">
+            <div class="showcase-flex flex">
+                <img src="/img/gallery-1.jpg" alt="">
+                <div class="showcase-content">
+                    <a href="">#music</a>
+                    <h2 class="subtitle">Exploring the new route</h2>
+                    <h4>19 SEPT 2020</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus similique officiis, voluptatibus reprehenderit veniam, harum laudantium, aliquam vitae saepe voluptatum eveniet illo eos quaerat deserunt repudiandae perferendis asperiores debitis. Expedita perspiciatis vel amet magni repellat quam laudantium veniam dolorum repellendus repudiandae totam nihil tempore modi, accusamus incidunt perspiciatis vel amet magni repellat necessitatibus nesciunt. Mollitia suscipit ipsam nobis eum tenetur illo ex dolorum impedit sit sed.br <br><br>
+
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima similique labore non impedit quidem aut veniam fugit laboriosam sapiente rerum.</p>
+                        <a href="article.html" class="btn">read full post</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- showcase-2 -->
+    <section id="showcase-2">
+        <div class="container">
+            <div class="showcase-2-flex flex">
+                <div class="row-1">
+                    <div class="row-1 flex">
+                        <img src="/img/gallery-1.jpg" alt="">
+                        <div class="row-1-text">
+                            <a href="">#music</a>
+                            <h3>music today</h3>
+                        </div>
+                    </div>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque est, autem nobis quia deleniti suscipit cumque fugit veritatis maxime ipsam? <br><br>
+
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi rem soluta ab suscipit magnam enim, quis numquam asperiores mollitia nostrum laboriosam vel ea neque qui explicabo eaque repellendus quaerat molestiae! <br><br>
+                        
+                        13 Jun 2020</p>
+                </div>
+            </div>
+            <div class="row-2">
+                <i class="fas fa-quote-left fa-4x text-main mt-5"></i>
+                <div class="profile">   
+                    <img src="/img/profile.jpg" alt="">
+                </div>
+                <i class="fas fa-quote-right fa-4x text-main"></i>
+            </div>
+            <div class="row-3">
+                <div class="container">
+                    <img src="/img/gallery-2.jpg" alt="">
+                    <p>Lorem, ipsum dolor sit</p>
+                    <h3>6 AUG 2020</h3>
+                </div>
+            </div>
+        </div>
+    </section>
     
 
     <!-- footer -->
