--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,25 @@
         </nav>
     </header>
     
-
+<!-- gallery -->
+<section id="gallery">
+    <div class="container">
+        <div class="gallery-row">
+            <div class="gallery-row1 flex">
+                <img src="/img/gallery-1.jpg" alt="">
+                <img src="/img/gallery-2.jpg" alt="">
+                <img src="/img/gallery-3.jpg" alt="">
+            </div>
+        </div>
+        <div class="gallery-row">
+            <div class="gallery-row1 flex">
+                <img src="/img/gallery-4.jpg" alt="">
+                <img src="/img/gallery-5.jpg" alt="">
+                <img src="/img/gallery-6.jpg" alt="">
+            </div>
+        </div>
+    </div>
+</section>
     <!-- footer -->
     <footer id="footer">
         <a href="https://twitter.com/AndresRamirez?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @AndresRamirez</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
