--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,40 @@
             </div>
         </nav>
     </header>
+
+    <!-- contact -->
+    <section id="contact">
+        <div class="container">
+            <h2 class="subtitle">contact us</h2>
+            <form action="">
+                <div class="form-group flex">
+                    <div class="flexbox">
+                        <label for="">Nombre</label>
+                        <input type="text" class="form-control" placeholder="">
+                    </div>
+                    <div class="flexbox">
+                        <label for="">Email</label>
+                        <input type="text" class="form-control" placeholder="">
+                    </div>
+                </div>
+                <div class="form-group flex">
+                    <div class="flexbox">
+                        <label for="">Fecha</label>
+                        <input type="date" class="form-control" placeholder="">
+                    </div>
+                    <div class="flexbox">
+                        <label for="">Hora</label>
+                        <input type="time" class="form-control" placeholder="">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="">Mensaje</label>
+                    <textarea name="" id="" cols="30" rows="10" class="form-control" placeholder=""></textarea>
+                </div>
+                <button class="btn">submit</button>
+            </form>
+        </div>
+    </section>
     
 
     <!-- footer -->
