--- a/quotes.html
+++ b/quotes.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+
     <link rel="stylesheet" href="/scss/styles.css">
     <link rel="stylesheet" media="screen and (max-width:1000px)" href="/scss/mobile.css">
     <title>Nomad | Welcome</title>
@@ -23,6 +25,52 @@
             </div>
         </nav>
     </header>
+
+    <!-- quotes -->
+    <section id="quotes">
+        <div class="container">
+            <div class="quotes-row flex">
+                <div class="quotes-row1">
+                    <i class="fas fa-quote-left fa-4x text-main mt-5"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium optio veritatis quos omnis
+                        facere qui ea? Reprehenderit, consequuntur unde!</p>
+                    <i class="fas fa-quote-right fa-4x text-main"></i>
+                </div>
+                <div class="quotes-row1">
+                    <i class="fas fa-quote-left fa-4x text-main mt-5"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium optio veritatis quos omnis
+                        facere qui ea? Reprehenderit, consequuntur unde!</p>
+                    <i class="fas fa-quote-right fa-4x text-main"></i>
+                </div>
+                <div class="quotes-row1">
+                    <i class="fas fa-quote-left fa-4x text-main mt-5"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium optio veritatis quos omnis
+                        facere qui ea? Reprehenderit, consequuntur unde!</p>
+                    <i class="fas fa-quote-right fa-4x text-main"></i>
+                </div>
+            </div>
+            <div class="quotes-row flex">
+                <div class="quotes-row1">
+                    <i class="fas fa-quote-left fa-4x text-main mt-5"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium optio veritatis quos omnis
+                        facere qui ea? Reprehenderit, consequuntur unde!</p>
+                    <i class="fas fa-quote-right fa-4x text-main"></i>
+                </div>
+                <div class="quotes-row1">
+                    <i class="fas fa-quote-left fa-4x text-main mt-5"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium optio veritatis quos omnis
+                        facere qui ea? Reprehenderit, consequuntur unde!</p>
+                    <i class="fas fa-quote-right fa-4x text-main"></i>
+                </div>
+                <div class="quotes-row1">
+                    <i class="fas fa-quote-left fa-4x text-main mt-5"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium optio veritatis quos omnis
+                        facere qui ea? Reprehenderit, consequuntur unde!</p>
+                    <i class="fas fa-quote-right fa-4x text-main"></i>
+                </div>
+            </div>
+        </div>
+    </section>
     
 
     <!-- footer -->
