--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/scss/styles.css">
     <link rel="stylesheet" media="screen and (max-width:1000px)" href="/scss/mobile.css">
     <title>Nomad | Welcome</title>
@@ -32,11 +34,11 @@
                 <div class="form-group flex">
                     <div class="flexbox">
                         <label for="">Nombre</label>
-                        <input type="text" class="form-control" placeholder="">
+                        <input type="text" class="form-control" placeholder="">
                     </div>
                     <div class="flexbox">
                         <label for="">Email</label>
-                        <input type="text" class="form-control" placeholder="">
+                        <input type="text" class="form-control" placeholder="">
                     </div>
                 </div>
                 <div class="form-group flex">
@@ -51,7 +53,7 @@
                 </div>
                 <div class="form-group">
                     <label for="">Mensaje</label>
-                    <textarea name="" id="" cols="30" rows="10" class="form-control" placeholder=""></textarea>
+                    <textarea name="" id="" cols="30" rows="10" class="form-control" placeholder=""></textarea>
                 </div>
                 <button class="btn">submit</button>
             </form>
