--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/scss/styles.css">
     <link rel="stylesheet" media="screen and (max-width:1000px)" href="/scss/mobile.css">
@@ -13,6 +14,14 @@
 
     <!-- mainheader -->
     <header id="mainheader">
+        <div class="subnavig">
+            <nav class="subnav">
+                <form class="form-inline">
+                    <input type="text"  placeholder="Search">
+                    <button class="btn-outline-dark"><i class="fas fa-search"></i></button>
+                </form>
+            </nav>
+        </div>
         <nav class="navbar">
             <div class="container">
                 <a href="index.html"><img src="/img/logo.png" alt="" class="logo"></a>
