--- a/quotes.html
+++ b/quotes.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/scss/styles.css">
     <link rel="stylesheet" media="screen and (max-width:1000px)" href="/scss/mobile.css">
@@ -11,20 +12,28 @@
 </head>
 <body>
 
-    <!-- mainheader -->
-    <header id="mainheader">
-        <nav class="navbar">
-            <div class="container">
-                <a href="index.html"><img src="/img/logo.png" alt="" class="logo"></a>
-                <ul>
-                    <li><a href="index.html">home</a></li>
-                    <li><a href="quotes.html">quotes</a></li>
-                    <li><a href="gallery.html">gallery</a></li>
-                    <li><a href="contact.html">contact</a></li>
-                </ul>
-            </div>
+   <!-- mainheader -->
+   <header id="mainheader">
+    <div class="subnavig">
+        <nav class="subnav">
+            <form class="form-inline">
+                <input type="text"  placeholder="Search">
+                <button class="btn-outline-dark"><i class="fas fa-search"></i></button>
+            </form>
         </nav>
-    </header>
+    </div>
+    <nav class="navbar">
+        <div class="container">
+            <a href="index.html"><img src="/img/logo.png" alt="" class="logo"></a>
+            <ul>
+                <li><a href="index.html">home</a></li>
+                <li><a href="quotes.html">quotes</a></li>
+                <li><a href="gallery.html">gallery</a></li>
+                <li><a href="contact.html">contact</a></li>
+            </ul>
+        </div>
+    </nav>
+</header>
 
     <!-- quotes -->
     <section id="quotes">
