--- a/gallery.html
+++ b/gallery.html
@@ -37,14 +37,14 @@
 <!-- gallery -->
 <section id="gallery">
     <div class="container">
-        <div class="gallery-row">
+        <div class="gallery-row flex">
             <div class="gallery-row1 flex">
                 <img src="/img/gallery-1.jpg" alt="">
                 <img src="/img/gallery-2.jpg" alt="">
                 <img src="/img/gallery-3.jpg" alt="">
             </div>
         </div>
-        <div class="gallery-row">
+        <div class="gallery-row flex">
             <div class="gallery-row1 flex">
                 <img src="/img/gallery-4.jpg" alt="">
                 <img src="/img/gallery-5.jpg" alt="">
